Fix overflow x

--- a/react/store.global.css
+++ b/react/store.global.css
@@ -1,6 +1,6 @@
 .vtex-store__template {
   min-height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .fill-white {
